--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         </activity>
         <activity android:name=".ImagePagerActivity"
                   android:launchMode="singleTop"
-                  android:theme="@android:style/Theme.Black.NoTitleBar" ></activity>
+                  android:theme="@android:style/Theme.Black.NoTitleBar" />
 
         <meta-data
             android:name="com.yiw.circledemo.MyGlideModule"
